force-app/main/default/objects/Next_Physical_Consultation__c/fields/Next_Physical_Consultation_In_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Next_Physical_Consultation_In_Compliance__c</fullName>
    <label>Next Physical Consultation In Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>