force-app/main/default/objects/Next_Physical_Consultation__c/fields/Next_Physical_Consultation_Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Next_Physical_Consultation_Visit_Type__c</fullName>
    <label>Next Physical Consultation Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>VSEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>