force-app/main/default/objects/Next_Physical_Consultation__c/fields/Past_Due_Next_Physical_Consultation__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Next_Physical_Consultation__c</fullName>
    <formula>IF( Next_Physical_Consultation_Visit__c &lt; TODAY(), TODAY() -  Next_Physical_Consultation_Visit__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due Next Physical Consultation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>