force-app/main/default/objects/Next_Physical_Consultation__c/fields/Physical_Consultation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Physical_Consultation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physical Consultation Completed</label>
    <type>Checkbox</type>
</CustomField>